# QML-STM32-BMS

./: README.md
QML-QSerialPort-BMS/: CMakeLists.txt  main.cpp
QML-QSerialPort-UART-BMS/: CMakeLists.txt  Main.qml  main.cpp  serialmanager.cpp  serialmanager.h
STM32-UART-BMS/: .cproject  .mxproject  .project  uart-IT.launch  uart.ioc  uart.launch
STM32-UART-BMS/Core/Inc/: stm32l4xx_it.h
STM32-UART-BMS/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
STM32-UART-BMS/Debug/: makefile  uart-IT.elf  uart-IT.list  uart-IT.map  uart.elf  uart.list  uart.map
STM32-UART-BMS/Debug/Core/Src/: main.su  stm32l4xx_hal_msp.su
